Adsense align center fix2

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -368,7 +368,6 @@ a.link-code {
 .adsense-content-top {
     margin-left: auto;
     margin-right: auto;
-    width: 730px;
 }
 
 @media (max-width: 159px) {
